fixed row wrapping

--- a/app/assets/stylesheets/modules/front_page/_chart-entry-song.scss
+++ b/app/assets/stylesheets/modules/front_page/_chart-entry-song.scss
@@ -12,43 +12,41 @@
 }
 
 .song-header {
-  min-width: 150px;
+  min-width: 270px;
   text-align: left;
-  width: 30%;
 }
 
 .song-title {
   // @include flex(1, 1, 240px);
-  font-size: 1.2rem;
+  font-size: 1.125rem;
   text-transform: uppercase;
 }
 
 .song-details {
   @extend %flex-h-flex-start-wrap;
   @extend %align-items-flex-start;
-  font-size: 1.2rem;
+  font-size: 1.07rem;
 }
 
 .song-artist,
 .song-album {
   @extend %flex-h-flex-start;
+  @extend %align-items-center;
   margin: 5px 20px 0 0;
 }
 
 .song-artist {
   min-width: 180px;
-  width: 25%;
 }
 
 .song-album {
   min-width: 240px;
-  width: 45%;
 }
 
 .chart-dash {
   border-bottom: $single-border $highlight-1;
-  height: 10px;
-  margin-right: 5px;
+  height: 0;
+  margin-right: 7px;
   width: 40px;
 }
 
